[package]
edition = "2021"
name = "virtual_input"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
windows = { version = "0.58.0", features = ["Foundation_Collections", "UI_Input_Preview_Injection", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
